check_output.txt
    Checking soroban-debugger v0.1.0 (/Users/backenddevopsdeveloper/Downloads/DRIPS/viv-soroban-debugger)
error[E0425]: cannot find type `DoctorArgs` in this scope
    --> src/cli/commands.rs:2944:21
     |
2944 | pub fn doctor(args: DoctorArgs) -> Result<()> {
     |                     ^^^^^^^^^^ not found in this scope
     |
help: consider importing this struct
     |
   1 + use crate::cli::args::DoctorArgs;
     |

warning: unused imports: `BudgetInspector` and `ResourceCheckpoint`
 --> src/output.rs:8:32
  |
8 | use crate::inspector::budget::{BudgetInspector, ResourceCheckpoint};
  |                                ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::collections::HashSet`
  --> src/server/debug_server.rs:17:5
   |
17 | use std::collections::HashSet;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Ordering`
  --> src/server/debug_server.rs:22:36
   |
22 | use std::sync::atomic::{AtomicU64, Ordering};
   |                                    ^^^^^^^^

warning: unused import: `StorageQuery`
  --> src/ui/dashboard.rs:14:51
   |
14 | use crate::inspector::storage::{StorageInspector, StorageQuery};
   |                                                   ^^^^^^^^^^^^

warning: unused variable: `offsets`
   --> src/debugger/source_map.rs:630:21
    |
630 |                 let offsets = if let Some(offsets) = line_to_offsets.get(requested_line) {
    |                     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_offsets`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `soroban-debugger` (lib) generated 5 warnings
error: could not compile `soroban-debugger` (lib) due to 1 previous error; 5 warnings emitted
